# neuromorphovis-service

./: .gitignore  Dockerfile  README.md  TODO.md  pyproject.toml
.devcontainer/: devcontainer.dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: post_create.sh  reset_devcontainer.sh
docs/: api-specs.json
files/: example-morphology.swc
neuromorphovis_service/: server.py
